Fixed getFirst/getLast in card class