@@ -27,7 +27,7 @@ public class Burner extends Wild {
 
 	public void act(ArrayList<Marble> marbles) throws ActionException, InvalidMarbleException {
 		
-		Marble curr=marbles.getFirst();
+		Marble curr=marbles.get(0);
 		gameManager.sendHome(curr);
 		
 	}
